un po' di commenti

--- a/templates/clickReperto.html
+++ b/templates/clickReperto.html
@@ -259,7 +259,7 @@
             <img src="/static/noimage.jpg" alt="Immagine del Reperto" class="img-fluid">
             {% endif %}
         </div>
-        <!-- Modal per ingrandire l'immagine -->
+        <!-- Modal to zoom the image -->
         <div class="modal fade" id="imageModal" tabindex="-1" role="dialog" aria-labelledby="imageModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
