Risolto errore mappa

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,8 @@
                 container: "viewDiv",
                 map: webMap,
                 center: [12.3331, 45.4376],
-                zoom: 12
+                zoom: 12,
+                rotation: 0
             });
 
             var searchWidget = new Search({ view: view });
