--- a/templates/result.html
+++ b/templates/result.html
@@ -141,7 +141,8 @@
                 container: "mapView",
                 map: map,
                 center: [parseFloat('{{ church_data.longitude }}'), parseFloat('{{ church_data.latitude }}')],
-                zoom: 18
+                zoom: 18,
+                rotation: 0
             });
         });
     </script>
