un po' di commenti

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,8 @@
                 container: "viewDiv",
                 map: webMap,
                 center: [12.3331, 45.4376],
-                zoom: 12
+                zoom: 12,
+                rotation: 0
             });
 
             // tools for the map
@@ -206,26 +207,7 @@
             height: 100%;
         }
 
-        .login-button {
-            width: 200px;
-            padding: 10px;
-            font-size: 1.6rem;
-            font-weight: bold;
-            background-color: #8B4513;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            text-decoration: none;
-            text-align: center;
-            display: block;
-            margin: 20px auto;
-        }
 
-        .login-button:hover {
-            background-color: #963;
-        }
     </style>
 </head>
 <body>
