--- a/templates/result.html
+++ b/templates/result.html
@@ -143,7 +143,8 @@
                 map: map,
                 // it centers the map on the coordinates of the church with the data in Churches.csv
                 center: [parseFloat('{{ church_data.longitude }}'), parseFloat('{{ church_data.latitude }}')],
-                zoom: 18
+                zoom: 18,
+                rotation: 0
             });
         });
     </script>
