--- a/templates/index.html
+++ b/templates/index.html
@@ -140,8 +140,6 @@
         }
 
 
-
-
         form {
             width: 45%;
             margin-bottom: 20px;
@@ -150,7 +148,7 @@
         label {
             font-size: 1.6rem;
             font-weight: bold;
-            color: #8B4513;
+            color: #000000;
             margin-bottom: 10px;
             display: block;
         }
@@ -163,8 +161,6 @@
             border-radius: 5px;
             margin-bottom: 20px;
         }
-
-
 
 
         .search-button {
@@ -203,34 +199,14 @@
             height: 100%;
         }
 
-        .login-button {
-            width: 200px;
-            padding: 10px;
-            font-size: 1.6rem;
-            font-weight: bold;
-            background-color: #8B4513;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            text-decoration: none;
-            text-align: center;
-            display: block;
-            margin: 20px auto;
-        }
-
-        .login-button:hover {
-            background-color: #963;
-        }
     </style>
 </head>
 <body>
 <h1>FLOOR-TILES</h1>
 <div class="container">
     <!-- Bottone che attiva il modal -->
-    <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#infoModal">
-        Info
+
+    <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#infoModal"><strong>Info</strong>
     </button>
 
     <!-- Modal -->
