--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VCG73V6N5Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-VCG73V6N5Z');
+    </script>
     <meta charset="UTF-8">
     <title>FLOOR_TILES</title>
     <link rel="stylesheet" href="/static/style.css">
